<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhengping.gogame.MainActivity"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/problembg"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:id="@+id/boardViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/adViewGoGame"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@android:color/transparent"

        >
        <com.zhengping.gogame.Board.BoardView
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:background="@drawable/s_problembg"/>



        <LinearLayout
            android:id="@+id/controlPanel"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible"
            android:background="@android:color/transparent"

            >
            <include
                android:layout_width="fill_parent"
                android:layout_height="0sp"
                android:layout_weight="1"

                android:id = "@+id/player_info_view"

                layout="@layout/player_info" />

            <include android:layout_width="match_parent"

                android:id="@+id/replay_controller"
                android:layout_height="40sp"
                layout="@layout/replay_game"
                android:visibility="gone"
                >

            </include >
            <LinearLayout
                android:id="@+id/play_game_controller"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="40sp">



                <Button style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/toExitBtn"
                    android:text = "@string/exit"
                    android:lines="2"
                    android:layout_width="0dp"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_height="40sp"
                    android:onClick="toNewGame"



                    />
                <Button


                    android:id="@+id/passBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text = "@string/pass"
                    android:textSize="12sp"
                    android:lines="2"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40sp"
                    android:onClick="pass"

                    />


                <Button style="@style/Widget.AppCompat.Button.Colored"


                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/undoBtn"
                    android:text = "@string/undo"
                    android:textSize="12sp"
                    android:lines="2"
                    android:onClick="toUndo"
                    android:layout_height="40sp"


                    android:src="@drawable/score"  />


                <Button style="@style/Widget.AppCompat.Button.Colored"

                    android:id="@+id/scoreBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text = "@string/territory"
                    android:textSize="12sp"
                    android:layout_height="40sp"
                    android:onClick="territory"

                    android:layout_gravity="bottom"


                    />


            </LinearLayout>



        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:id="@+id/newGameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adViewGoGame"
        android:background="@android:color/white"
        android:visibility="invisible"
        android:clickable="true"
        >
        <include layout="@layout/new_game" />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_above="@+id/adViewGoGame"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loadingText"
            android:layout_centerHorizontal="true"

            />
        <TextView
            android:id="@+id/loadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:textAlignment="center"
            android:textSize="20sp"

            />


    </RelativeLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewGoGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        ads:adSize="BANNER"
        android:visibility="visible"
        ads:adUnitId="ca-app-pub-8278333774696675/3086132541">
    </com.google.android.gms.ads.AdView>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adViewGoGame"
        android:visibility="invisible"
        android:onClick="toCloseTerritory"
        android:id ="@+id/territory_view"
        layout="@layout/territory"
        >


    </include>



</RelativeLayout>